# vercel-block-nonce-minigame

./: .gitignore  README.md  package-lock.json  package.json
backend/: README.md  gameLogic.js  hardhat.config.js  package-lock.json  package.json  server-test.js  server.js  zkProofService.js
backend/cache/: solidity-files-cache.json
backend/scripts/: deploy.js
backend/src/: app.js  gameLogic.js  index.js  server.js
backend/src/config/: config.js  gameConfig.js
backend/src/middlewares/: auth.js
backend/src/models/: GameState.js
backend/src/routes/: gameRoutes.js
backend/src/services/: GameService.js  GameStateManager.js  ProofGenerator.js  ProofVerifier.js
backend/test/: GodsToken.js
contracts/: GodsToken.sol
frontend/: README.md  components.json  next.config.mjs  package-lock.json  package.json
frontend/.next/: app-build-manifest.json  trace
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx  styles.css  wagmi.ts
frontend/components/: CountdownTimer.tsx  GridGame.tsx  InstructionsComponent.tsx  IsometricGrid.tsx  LoadingComponent.tsx  SwishSpinner.tsx
frontend/hooks/: useGameCreation.ts  useGameInitialization.ts  useGameStatePolling.ts  useRemainingTime.ts
frontend/lib/: api.ts  mockGameState.ts
frontend/types/: game.ts
zk-service/: .gitignore  README.md
zk-service/program/: Cargo.toml
zk-service/program/elf/: main  riscv32im-succinct-zkvm-elf  temp_program_9
zk-service/program/src/: main.rs
zk-service/script/: .env.example  Cargo.toml
zk-service/script/src/: handlers.rs  lib.rs  main.rs  state.rs  types.rs
(+37 files in other folders)
