[workspace]
[package]
name = "block-nonce-minigame-script"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", rev = "v1.0.1" }
aligned-sdk = { git = "https://github.com/yetanotherco/aligned_layer", tag="v0.10.2" }
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
ethers = { tag = "v2.0.15-fix-reconnections", features = [
    "ws",
    "rustls",
], git = "https://github.com/yetanotherco/ethers-rs.git" }
bincode = "1.3.3"
dotenv = "0.15.0"

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git", rev = "v1.0.1" }
